# Project-Template

CMake-Template/: .gitignore  CMakeLists.txt  README.md  template.code-workspace
CMake-Template/lib/: CMakeLists.txt
CMake-Template/lib/lib1/: lib1.c  lib1.h
CMake-Template/lib/lib2/: lib2.c  lib2.h
CMake-Template/src/: CMakeLists.txt  main.c
CMake-Template/src/platform/: platform.h
CMake-Template/src/platform/windows/: CMakeLists.txt  platform.c  winfunc.c  winfunc.h
CMake-Template/tools/: cmake_rebuild.bat  load.bat  run.bat  template.c  template.h
Embedded/AT32F437-FreeRTOS-Template/: .clang-format  .clang-format-ignore  .clangd  .gitignore  AT32F437.code-workspace  CMakeLists.txt
Embedded/AT32F437-FreeRTOS-Template/cmake/: at32.cmake  freertos.cmake  gcc-arm-none-eabi.cmake  linker.cmake
Embedded/AT32F437-FreeRTOS-Template/lib/: CMakeLists.txt
Embedded/AT32F437-FreeRTOS-Template/lib/config/: FreeRTOSConfig.h
Embedded/AT32F437-FreeRTOS-Template/lib/usb_drivers/src/: usbh_int.c
Embedded/AT32F437-FreeRTOS-Template/src/: CMakeLists.txt
Embedded/AT32F437-FreeRTOS-Template/src/app/: app_task.c
Embedded/AT32F437-FreeRTOS-Template/src/core/: interrupt.c  main.c  system.c
Embedded/AT32F437-FreeRTOS-Template/src/dbg/: debug.c  debug.h
Embedded/AT32F437-FreeRTOS-Template/src/hal/: hal.h  hal_systick.c  hal_systick.h  hal_uart.c  hal_uart.h  mcu.h  nvic.c
Embedded/AT32F437-FreeRTOS-Template/tools/: AT32F437ZMT7.jflash  _template.c  _template.h  keilkill.bat
